erlang/ErlangParser.java
// Generated from Erlang.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ErlangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__62=1, T__61=2, T__60=3, T__59=4, T__58=5, T__57=6, T__56=7, T__55=8, 
		T__54=9, T__53=10, T__52=11, T__51=12, T__50=13, T__49=14, T__48=15, T__47=16, 
		T__46=17, T__45=18, T__44=19, T__43=20, T__42=21, T__41=22, T__40=23, 
		T__39=24, T__38=25, T__37=26, T__36=27, T__35=28, T__34=29, T__33=30, 
		T__32=31, T__31=32, T__30=33, T__29=34, T__28=35, T__27=36, T__26=37, 
		T__25=38, T__24=39, T__23=40, T__22=41, T__21=42, T__20=43, T__19=44, 
		T__18=45, T__17=46, T__16=47, T__15=48, T__14=49, T__13=50, T__12=51, 
		T__11=52, T__10=53, T__9=54, T__8=55, T__7=56, T__6=57, T__5=58, T__4=59, 
		T__3=60, T__2=61, T__1=62, T__0=63, TokAtom=64, TokVar=65, TokFloat=66, 
		TokInteger=67, TokChar=68, TokString=69, AttrName=70, Comment=71, WS=72;
	public static final String[] tokenNames = {
		"<INVALID>", "'bsr'", "'bor'", "'fun'", "'=<'", "'receive'", "'{'", "'>>'", 
		"'..'", "'::'", "'='", "'bxor'", "'bnot'", "'orelse'", "'('", "','", "'/='", 
		"':-'", "'after'", "'<-'", "'band'", "'>='", "'<'", "'++'", "']'", "'=:='", 
		"'#'", "'+'", "'/'", "'catch'", "'of'", "'||'", "';'", "'<<'", "'}'", 
		"'if'", "'try'", "'rem'", "'<='", "'when'", "'andalso'", "'*'", "'bsl'", 
		"'.'", "'case'", "'->'", "'...'", "':'", "'['", "'=='", "'--'", "'|'", 
		"'>'", "'xor'", "'or'", "'!'", "'div'", "'begin'", "'end'", "')'", "'and'", 
		"'not'", "'=/='", "'-'", "TokAtom", "TokVar", "TokFloat", "TokInteger", 
		"TokChar", "TokString", "AttrName", "Comment", "WS"
	};
	public static final int
		RULE_forms = 0, RULE_form = 1, RULE_tokAtom = 2, RULE_tokVar = 3, RULE_tokFloat = 4, 
		RULE_tokInteger = 5, RULE_tokChar = 6, RULE_tokString = 7, RULE_attribute = 8, 
		RULE_typeSpec = 9, RULE_specFun = 10, RULE_typedAttrVal = 11, RULE_typedRecordFields = 12, 
		RULE_typedExprs = 13, RULE_typedExpr = 14, RULE_typeSigs = 15, RULE_typeSig = 16, 
		RULE_typeGuards = 17, RULE_typeGuard = 18, RULE_topTypes = 19, RULE_topType = 20, 
		RULE_topType100 = 21, RULE_type200 = 22, RULE_type300 = 23, RULE_type400 = 24, 
		RULE_type500 = 25, RULE_type = 26, RULE_funType100 = 27, RULE_funType = 28, 
		RULE_fieldTypes = 29, RULE_fieldType = 30, RULE_binaryType = 31, RULE_binBaseType = 32, 
		RULE_binUnitType = 33, RULE_attrVal = 34, RULE_function = 35, RULE_functionClause = 36, 
		RULE_clauseArgs = 37, RULE_clauseGuard = 38, RULE_clauseBody = 39, RULE_expr = 40, 
		RULE_expr100 = 41, RULE_expr150 = 42, RULE_expr160 = 43, RULE_expr200 = 44, 
		RULE_expr300 = 45, RULE_expr400 = 46, RULE_expr500 = 47, RULE_expr600 = 48, 
		RULE_expr700 = 49, RULE_expr800 = 50, RULE_exprMax = 51, RULE_list = 52, 
		RULE_tail = 53, RULE_binary = 54, RULE_binElements = 55, RULE_binElement = 56, 
		RULE_bitExpr = 57, RULE_optBitSizeExpr = 58, RULE_optBitTypeList = 59, 
		RULE_bitTypeList = 60, RULE_bitType = 61, RULE_bitSizeExpr = 62, RULE_listComprehension = 63, 
		RULE_binaryComprehension = 64, RULE_lcExprs = 65, RULE_lcExpr = 66, RULE_tuple = 67, 
		RULE_recordExpr = 68, RULE_recordTuple = 69, RULE_recordFields = 70, RULE_recordField = 71, 
		RULE_functionCall = 72, RULE_ifExpr = 73, RULE_ifClauses = 74, RULE_ifClause = 75, 
		RULE_caseExpr = 76, RULE_crClauses = 77, RULE_crClause = 78, RULE_receiveExpr = 79, 
		RULE_funExpr = 80, RULE_atomOrVar = 81, RULE_integerOrVar = 82, RULE_funClauses = 83, 
		RULE_funClause = 84, RULE_tryExpr = 85, RULE_tryCatch = 86, RULE_tryClauses = 87, 
		RULE_tryClause = 88, RULE_argumentList = 89, RULE_exprs = 90, RULE_guard = 91, 
		RULE_atomic = 92, RULE_prefixOp = 93, RULE_multOp = 94, RULE_addOp = 95, 
		RULE_listOp = 96, RULE_compOp = 97, RULE_ruleClauses = 98, RULE_ruleClause = 99, 
		RULE_ruleBody = 100;
	public static final String[] ruleNames = {
		"forms", "form", "tokAtom", "tokVar", "tokFloat", "tokInteger", "tokChar", 
		"tokString", "attribute", "typeSpec", "specFun", "typedAttrVal", "typedRecordFields", 
		"typedExprs", "typedExpr", "typeSigs", "typeSig", "typeGuards", "typeGuard", 
		"topTypes", "topType", "topType100", "type200", "type300", "type400", 
		"type500", "type", "funType100", "funType", "fieldTypes", "fieldType", 
		"binaryType", "binBaseType", "binUnitType", "attrVal", "function", "functionClause", 
		"clauseArgs", "clauseGuard", "clauseBody", "expr", "expr100", "expr150", 
		"expr160", "expr200", "expr300", "expr400", "expr500", "expr600", "expr700", 
		"expr800", "exprMax", "list", "tail", "binary", "binElements", "binElement", 
		"bitExpr", "optBitSizeExpr", "optBitTypeList", "bitTypeList", "bitType", 
		"bitSizeExpr", "listComprehension", "binaryComprehension", "lcExprs", 
		"lcExpr", "tuple", "recordExpr", "recordTuple", "recordFields", "recordField", 
		"functionCall", "ifExpr", "ifClauses", "ifClause", "caseExpr", "crClauses", 
		"crClause", "receiveExpr", "funExpr", "atomOrVar", "integerOrVar", "funClauses", 
		"funClause", "tryExpr", "tryCatch", "tryClauses", "tryClause", "argumentList", 
		"exprs", "guard", "atomic", "prefixOp", "multOp", "addOp", "listOp", "compOp", 
		"ruleClauses", "ruleClause", "ruleBody"
	};

	@Override
	public String getGrammarFileName() { return "Erlang.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ErlangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FormsContext extends ParserRuleContext {
		public FormContext form(int i) {
			return getRuleContext(FormContext.class,i);
		}
		public TerminalNode EOF() { return getToken(ErlangParser.EOF, 0); }
		public List<FormContext> form() {
			return getRuleContexts(FormContext.class);
		}
		public FormsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forms; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).enterForms(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).exitForms(this);
		}
	}

	public final FormsContext forms() throws RecognitionException {
		FormsContext _localctx = new FormsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_forms);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(202); form();
				}
				}
				setState(205); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 63)) & ~0x3f) == 0 && ((1L << (_la - 63)) & ((1L << (T__0 - 63)) | (1L << (TokAtom - 63)) | (1L << (AttrName - 63)))) != 0) );
			setState(207); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormContext extends ParserRuleContext {
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public RuleClausesContext ruleClauses() {
			return getRuleContext(RuleClausesContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public FormContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_form; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).enterForm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).exitForm(this);
		}
	}

	public final FormContext form() throws RecognitionException {
		FormContext _localctx = new FormContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_form);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(212);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(209); attribute();
				}
				break;
			case 2:
				{
				setState(210); function();
				}
				break;
			case 3:
				{
				setState(211); ruleClauses();
				}
				break;
			}
			setState(214); match(T__20);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokAtomContext extends ParserRuleContext {
		public TerminalNode TokAtom() { return getToken(ErlangParser.TokAtom, 0); }
		public TokAtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokAtom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).enterTokAtom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).exitTokAtom(this);
		}
	}

	public final TokAtomContext tokAtom() throws RecognitionException {
		TokAtomContext _localctx = new TokAtomContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tokAtom);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(216); match(TokAtom);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokVarContext extends ParserRuleContext {
		public TerminalNode TokVar() { return getToken(ErlangParser.TokVar, 0); }
		public TokVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).enterTokVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).exitTokVar(this);
		}
	}

	public final TokVarContext tokVar() throws RecognitionException {
		TokVarContext _localctx = new TokVarContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tokVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(218); match(TokVar);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokFloatContext extends ParserRuleContext {
		public TerminalNode TokFloat() { return getToken(ErlangParser.TokFloat, 0); }
		public TokFloatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokFloat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).enterTokFloat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).exitTokFloat(this);
		}
	}

	public final TokFloatContext tokFloat() throws RecognitionException {
		TokFloatContext _localctx = new TokFloatContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tokFloat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(220); match(TokFloat);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokIntegerContext extends ParserRuleContext {
		public TerminalNode TokInteger() { return getToken(ErlangParser.TokInteger, 0); }
		public TokIntegerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokInteger; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).enterTokInteger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).exitTokInteger(this);
		}
	}

	public final TokIntegerContext tokInteger() throws RecognitionException {
		TokIntegerContext _localctx = new TokIntegerContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tokInteger);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(222); match(TokInteger);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokCharContext extends ParserRuleContext {
		public TerminalNode TokChar() { return getToken(ErlangParser.TokChar, 0); }
		public TokCharContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokChar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).enterTokChar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).exitTokChar(this);
		}
	}

	public final TokCharContext tokChar() throws RecognitionException {
		TokCharContext _localctx = new TokCharContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_tokChar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(224); match(TokChar);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokStringContext extends ParserRuleContext {
		public TerminalNode TokString() { return getToken(ErlangParser.TokString, 0); }
		public TokStringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokString; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).enterTokString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).exitTokString(this);
		}
	}

	public final TokStringContext tokString() throws RecognitionException {
		TokStringContext _localctx = new TokStringContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_tokString);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(226); match(TokString);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeContext extends ParserRuleContext {
		public TokAtomContext tokAtom() {
			return getRuleContext(TokAtomContext.class,0);
		}
		public AttrValContext attrVal() {
			return getRuleContext(AttrValContext.class,0);
		}
		public TypedAttrValContext typedAttrVal() {
			return getRuleContext(TypedAttrValContext.class,0);
		}
		public TypeSpecContext typeSpec() {
			return getRuleContext(TypeSpecContext.class,0);
		}
		public TerminalNode AttrName() { return getToken(ErlangParser.AttrName, 0); }
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).enterAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).exitAttribute(this);
		}
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_attribute);
		try {
			setState(244);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(228); match(T__0);
				setState(229); tokAtom();
				setState(230); attrVal();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(232); match(T__0);
				setState(233); tokAtom();
				setState(234); typedAttrVal();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(236); match(T__0);
				setState(237); tokAtom();
				setState(238); match(T__49);
				setState(239); typedAttrVal();
				setState(240); match(T__4);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(242); match(AttrName);
				setState(243); typeSpec();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeSpecContext extends ParserRuleContext {
		public SpecFunContext specFun() {
			return getRuleContext(SpecFunContext.class,0);
		}
		public TypeSigsContext typeSigs() {
			return getRuleContext(TypeSigsContext.class,0);
		}
		public TypeSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).enterTypeSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).exitTypeSpec(this);
		}
	}

	public final TypeSpecContext typeSpec() throws RecognitionException {
		TypeSpecContext _localctx = new TypeSpecContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_typeSpec);
		try {
			setState(254);
			switch (_input.LA(1)) {
			case TokAtom:
				enterOuterAlt(_localctx, 1);
				{
				setState(246); specFun();
				setState(247); typeSigs();
				}
				break;
			case T__49:
				enterOuterAlt(_localctx, 2);
				{
				setState(249); match(T__49);
				setState(250); specFun();
				setState(251); typeSigs();
				setState(252); match(T__4);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpecFunContext extends ParserRuleContext {
		public List<TokAtomContext> tokAtom() {
			return getRuleContexts(TokAtomContext.class);
		}
		public TokAtomContext tokAtom(int i) {
			return getRuleContext(TokAtomContext.class,i);
		}
		public TokIntegerContext tokInteger() {
			return getRuleContext(TokIntegerContext.class,0);
		}
		public SpecFunContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specFun; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).enterSpecFun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).exitSpecFun(this);
		}
	}

	public final SpecFunContext specFun() throws RecognitionException {
		SpecFunContext _localctx = new SpecFunContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_specFun);
		try {
			setState(273);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(256); tokAtom();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(257); tokAtom();
				setState(258); match(T__16);
				setState(259); tokAtom();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(261); tokAtom();
				setState(262); match(T__35);
				setState(263); tokInteger();
				setState(264); match(T__54);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(266); tokAtom();
				setState(267); match(T__16);
				setState(268); tokAtom();
				setState(269); match(T__35);
				setState(270); tokInteger();
				setState(271); match(T__54);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedAttrValContext extends ParserRuleContext {
		public TopTypeContext topType() {
			return getRuleContext(TopTypeContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TypedRecordFieldsContext typedRecordFields() {
			return getRuleContext(TypedRecordFieldsContext.class,0);
		}
		public TypedAttrValContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedAttrVal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).enterTypedAttrVal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).exitTypedAttrVal(this);
		}
	}
